<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView_settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            style="@style/Theme.MyFavoriteQuotes.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_favorite_quote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favorite_quote"
            style="@style/Theme.MyFavoriteQuotes.Quote"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/textView_settings_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <TextView
            android:id="@+id/textView_favorite_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author"
            style="@style/Theme.MyFavoriteQuotes.Author"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/textView_favorite_quote"
            app:layout_constraintStart_toStartOf="@id/textView_favorite_quote"
            app:layout_constraintEnd_toEndOf="@id/textView_favorite_quote"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            style="@style/Theme.MyFavoriteQuotes.Button"
            android:layout_marginTop="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/textView_favorite_author"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_export"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/export"
            style="@style/Theme.MyFavoriteQuotes.Button"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/button_clear"
            app:layout_constraintStart_toStartOf="@id/button_clear"
            app:layout_constraintEnd_toEndOf="@id/button_clear"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Theme.MyFavoriteQuotes.Button"
            android:text="@string/mode"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/button_export"
            app:layout_constraintStart_toStartOf="@id/button_export"
            app:layout_constraintEnd_toEndOf="@id/button_export"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>