<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView_add_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_quote"
            style="@style/Theme.MyFavoriteQuotes.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_add_quote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quote"
            style="@style/Theme.MyFavoriteQuotes.Normal_Text"
            android:layout_margin="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_add_title" />

        <EditText
            android:id="@+id/editText_quote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_quote"
            style="@style/Theme.MyFavoriteQuotes.EditText"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="@+id/textView_add_quote"
            app:layout_constraintTop_toBottomOf="@+id/textView_add_quote" />

        <EditText
            android:id="@+id/editText_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/author"
            style="@style/Theme.MyFavoriteQuotes.EditText"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="@+id/editText_quote"
            app:layout_constraintTop_toBottomOf="@+id/editText_quote"/>

        <CheckBox
            android:id="@+id/checkbox_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/be_favorite"
            android:enabled="false"
            style="@style/Theme.MyFavoriteQuotes.CheckBox"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/editText_author"
            app:layout_constraintTop_toBottomOf="@+id/editText_author" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            style="@style/Theme.MyFavoriteQuotes.Button"
            android:layout_margin="16dp"
            android:enabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>