<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RandomQuoteFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView_random_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random_quote"
            style="@style/Theme.MyFavoriteQuotes.Title"
            android:layout_marginTop="16dp"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_random_quote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/random_quote"
            style="@style/Theme.MyFavoriteQuotes.Quote"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_random_title" />

        <TextView
            android:id="@+id/textView_random_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author"
            style="@style/Theme.MyFavoriteQuotes.Author"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="@+id/textView_random_quote"
            app:layout_constraintStart_toStartOf="@+id/textView_random_quote"
            app:layout_constraintTop_toBottomOf="@+id/textView_random_quote" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="@style/Theme.MyFavoriteQuotes.Button"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toStartOf="@id/button_save"
            app:layout_constraintStart_toStartOf="@+id/textView_random_author"
            app:layout_constraintTop_toBottomOf="@+id/textView_random_author" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            style="@style/Theme.MyFavoriteQuotes.Button"
            android:enabled="false"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="@+id/textView_random_author"
            app:layout_constraintStart_toEndOf="@+id/button_cancel"
            app:layout_constraintTop_toBottomOf="@+id/textView_random_author" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>