<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:elevation="8dp"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="8dp"
      >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/textView_quote"
                style="@style/Theme.MyFavoriteQuotes.Quote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/my_quote"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/textView_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author"
                style="@style/Theme.MyFavoriteQuotes.Author"
                android:layout_marginTop="16dp"
                android:layout_marginStart="13dp"
                app:layout_constraintTop_toBottomOf="@id/textView_quote"
                app:layout_constraintStart_toStartOf="@id/textView_quote"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <ImageButton
            android:id="@+id/imageButton_favorite"
            style="@style/Theme.MyFavoriteQuotes.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="13dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/be_favorite"
            android:src="@drawable/my_favorite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
