<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <fragment
        android:id="@+id/landing_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/activity_constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/fragment_navigation" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Theme.MyFavoriteQuotes.Nav_Bar"
        app:layout_constraintTop_toBottomOf="@id/landing_fragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButton_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/view"
            android:src="@drawable/quote_view"
            style="@style/Theme.MyFavoriteQuotes.ImageButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imageButton_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.25"/>

        <ImageButton
            android:id="@+id/imageButton_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/add_new"
            style="@style/Theme.MyFavoriteQuotes.ImageButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imageButton_random_quote"
            app:layout_constraintStart_toEndOf="@id/imageButton_view"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintTop_toTopOf="parent"
            />

        <ImageButton
            android:id="@+id/imageButton_random_quote"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/get_random_quote"
            android:src="@drawable/random_quote"
            style="@style/Theme.MyFavoriteQuotes.ImageButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imageButton_settings"
            app:layout_constraintStart_toEndOf="@id/imageButton_add"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageButton
            android:id="@+id/imageButton_settings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/settings"
            android:src="@drawable/settings"
            style="@style/Theme.MyFavoriteQuotes.ImageButton"
            app:layout_constraintStart_toEndOf="@id/imageButton_random_quote"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.25"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>